--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
     <script src="https://use.fontawesome.com/d1341f9b7a.js"></script>
     <link href="https://use.fontawesome.com/d1341f9b7a.css" media="all" rel="stylesheet">
-    <link rel="stylesheet" href="PersonalWebPageStyle.css">
+    <link rel="stylesheet" type="text/css" href="/css/PersonalWebPageStyle.css">
     <link rel="icon" href="./img/halfwayhome.ico" sizes="256x256">
     <title>David Blankinship</title>
 
