--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <span class="dot"></span>
         </div>
         <br>
-
+<div class="container">
         <h1>
             David Blankinship</h1>
         <h2>
@@ -65,7 +65,7 @@
         </h2>
 
 
-
+        </div>
         <ul>
             <li><a href="https://www.facebook.com/glenn.blankin/timeline?lst=100006341160302%3A100006341160302%3A1548729476"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
             <li><a href="https://twitter.com/BlankinDavid"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
