--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>David Blankinship</title>
-		<link rel="stylesheet" type="text/css" href="/css/personalwebpage.css">
+		<link rel="stylesheet" type="text/css" href="/css/personalwebpagestyle.css">
 	</head>
 	<body>
 		<nav>
