--- a/index.html
+++ b/index.html
@@ -1,29 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>David Blankinship</title>
-		<link rel="stylesheet" type="text/css" href="/css/personalwebpagestyle.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: David Blankinship
+---
+<div class="blurb">
+	<h1>Hi there, I'm David Blankinship!</h1>
+	<p>From day one, this self-taught journey has been both exciting and exhausting. Within a very short time I quickly realized a passion for continued learning and development, front to back. Utilizing my transferable skills derived from a career in Quality has allowed me to apply out-of-the-box problem solving approaches resulting in a shorter learning curve approaching each milestone. </p>
+</div><!-- /.blurb -->
