--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: David Blankinship
 ---
-<div class="blurb">
+<div class="container">
 	<h1>Hi there, I'm David Blankinship!</h1>
 	<p>This is my about page. </p>
 </div><!-- /.blurb -->
