--- a/about/about.html
+++ b/about/about.html
@@ -5,4 +5,4 @@ title: David Blankinship
 <div class="blurb">
 	<h1>Hi there, I'm David Blankinship!</h1>
 	<p>This is my about page. </p>
-</div>
+</div><!--/.blurb-->
