--- a/about/index.html
+++ b/about/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: David Blankinship
+title: About
 ---
 <div class="blurb">
 	<h1>Hi there, I'm David Blankinship!</h1>
-	<p>This is my about page. </p>
-</div><!--/.blurb-->
+	<p>About me. </p>
+</div><!-- /.blurb -->
