--- a/about/index.html
+++ b/about/index.html
@@ -5,4 +5,5 @@ title: About
 <div class="blurb">
 	<h1>Hi there, I'm David Blankinship!</h1>
 	<p>About me. </p>
+	<a id="2019FullStack" href=/about/2019 Full Stack.pdf>2019 Full Stack Certificate</a>
 </div><!-- /.blurb -->
