--- a/about/index.html
+++ b/about/index.html
@@ -6,4 +6,10 @@ title: About
 	<h1>Hi there, I'm David Blankinship!</h1>
 	<p>About me. </p>
 	<a id="2019FullStack" href=/about/2019 Full Stack.pdf>2019 Full Stack Certificate</a>
+	<br>
+	<br>
+	 <ul>
+            <li><a href="https://www.facebook.com/glenn.blankin/timeline?lst=100006341160302%3A100006341160302%3A1548729476"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+            <li><a href="https://twitter.com/BlankinDavid"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
+         </ul>
 </div><!-- /.blurb -->
