--- a/about/index.html
+++ b/about/index.html
@@ -9,7 +9,7 @@ title: About
 	<br>
 	<br>
 	 <ul>
-            <li><a href="https://www.facebook.com/glenn.blankin/timeline?lst=100006341160302%3A100006341160302%3A1548729476"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
-            <li><a href="https://twitter.com/BlankinDavid"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
+            <li><a href="https://www.facebook.com/glenn.blankin/timeline?lst=100006341160302%3A100006341160302%3A1548729476">Facebook</a></li>
+            <li><a href="https://twitter.com/BlankinDavid">Twitter</a></li>
          </ul>
 </div><!-- /.blurb -->
