--- a/about/index.html
+++ b/about/index.html
@@ -5,6 +5,10 @@ title: About
 <div class="blurb">
 	<h1>Hi there, I'm David Blankinship!</h1>
 	<p>About me. </p>
-	<link href="/about/2019 Full Stack.pdf">2019 Full Stack Certificate</a>
+	<a href="https://dblankin.github.io/about/2019 Full Stack.pdf">2019 Full Stack Certificate</a>
+	<a href="https://dblankin.github.io/about/Modern JS from the Beginning.pdf">Modern JS Certificate</a>
+	<a href="https://dblankin.github.io/about/Python3 Certificate.pdf">Python 3 Certificate</a>
+	<a href="https://dblankin.github.io/about/ATBS Certificate.pdf">ATBS Certificate</a>
+	<a href="https://dblankin.github.io/about/David Blankinship Resume.pdf">Resume</a>
 	
 </div><!-- /.blurb -->
