--- a/about/index.html
+++ b/about/index.html
@@ -3,13 +3,14 @@ layout: default
 title: About
 ---
 <div class="blurb">
-	<h1>Hi there, I'm David Blankinship!</h1>
-	<p>About me. </p>
+	<h1>About David Blankinship!</h1>
+	<p>Milestones </p>
 	<ul>
 	<li><a href="https://dblankin.github.io/about/2019 Full Stack.pdf">2019 Full Stack Certificate</a></li>
 	<li><a href="https://dblankin.github.io/about/Modern JS from the Beginning.pdf">Modern JS Certificate</a></li>
 	<li><a href="https://dblankin.github.io/about/Python3 Certificate.pdf">Python 3 Certificate</a></li>
 	<li><a href="https://dblankin.github.io/about/ATBS Certificate.pdf">ATBS Certificate</a></li>
+	<li><a href="https://dblankin.github.io/about/ISO 9001-2015 Lead Auditor Certificate.pdf">ISO 9001:2015 Lead Auditor</a></li>
 	<li><a href="https://dblankin.github.io/about/David Blankinship Resume.pdf">Resume</a>
 	</ul>
 	
