--- a/projects/index.html
+++ b/projects/index.html
@@ -5,4 +5,5 @@ title: Projects
 <div class="projects">
 <h1>Projects</h1>
 <p>List of Projects</p>
+  <a href="68.35.119.5:34000">Storm Kings on Pi</a>
 </div><!-- /.projects-->
