--- a/projects/index.html
+++ b/projects/index.html
@@ -5,5 +5,6 @@ title: Projects
 <div class="projects">
 <h1>Projects</h1>
 <p>List of Projects</p>
-  <a href="68.35.119.5:34000">Storm Kings on Pi</a>
+  <a href="http://68.35.119.5:34000">Storm Kings on Pi</a>
+  <br>
 </div><!-- /.projects-->
