--- a/projects/index.html
+++ b/projects/index.html
@@ -6,7 +6,7 @@ title: Projects
 <h1>Projects</h1>
 <p>List of Projects</p>
   <h2>
-  <a href="https://68.35.119.5:34000">Storm Kings on Pi</a>
+  <a href="http://68.35.119.5:34000">Storm Kings on Pi</a>
   </h2>
   <br>
 </div><!-- /.projects-->
