--- a/projects/index.html
+++ b/projects/index.html
@@ -7,6 +7,7 @@ title: Projects
 <p>List of Projects</p>
   <h2>
   <a href="http://68.35.119.5:34000">Storm Kings on Pi</a>
+  <a href="projects/deer_season.html">Deer Season Countdown</a>
   </h2>
   <br>
 </div><!-- /.projects-->
