--- a/projects/index.html
+++ b/projects/index.html
@@ -6,8 +6,8 @@ title: Projects
 <h1>Projects</h1>
 <p>List of Projects</p>
   <h2>
-  <a href="https://dmdavid.halfwayhomeadventuring.org/join">Storm Kings on Pi</a>
-  <a href="https://dblankin.github.io/projects/deer_season.html">Deer Season Countdown</a>
+  <a href="https://dmdavid.halfwayhomeadventuring.org/join">Storm Kings on Pi</a><br>
+  <a href="https://dblankin.github.io/projects/deer_season.html">Deer Season Countdown</a><br>
   </h2>
   <br>
 </div><!-- /.projects-->
