--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@ title: David Blankinship
 ---
 <div class="blurb">
 	<h1>Hi there, I'm David Blankinship!</h1>
-	<p>From day one, this self-taught journey has been both exciting and exhausting. Within a very short time I quickly realized a passion for continued learning and development, front to back. Utilizing my transferable skills derived from a career in Quality has allowed me to apply out-of-the-box problem solving approaches resulting in a shorter learning curve approaching each milestone. </p>
+	<p>From day one, this self-taught journey has been both exciting and exhausting. Within a very short time I quickly realized a passion for continued learning and development.  
+		A long career in Manufacturing Quality has allowed me to utilize my transferable skills to apply out-of-the-box problem solving solutions which result in a shorter 
+		learning curve while approaching each milestone. </p>
 </div><!-- /.blurb -->
