--- a/projects/deer_season.html
+++ b/projects/deer_season.html
@@ -11,7 +11,7 @@
     </head>
     <body>
        <h1>
-        "Countdown to Opening Day"
+        "Countdown to the Last Opportunity"
        </h1>
        <h2 id="days"></h2>
        
